# fastapi-taskqueue

./: .env.example  AGENTS.md  Makefile  NOTES.md  README.md  TESTS.md  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  config.py  main.py
apps/api/routers/: jobs.py
apps/shared_models/: __init__.py  alchemy_models.py  database.py  orm_helpers.py  pydantic_api_models.py
apps/worker/: __init__.py
docs/: API.md  README.md
infra/: README.md
infra/k8s/: README.md
tests/: conftest.py  test_orm_helpers.py
tests/api/: test_main.py
